# kirohackathon

./: .gitignore  ADD-FORMATION-FEATURE.md  COOKIE-SETUP.md  COOKIE-STATUS.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_RENDER.md  FIX-RENDER-COOKIES-NOW.md  IMPLEMENTATION-SUMMARY.md  LICENSE.md  PRD.md  PRODUCTION-COOKIES-QUICKSTART.md  QUICK-FIX.md  README.md  RENDER-CHECKLIST.md  RENDER-COOKIES-FIX.md  RENDER-COOKIES-SIMPLE.md  RENDER-DEPLOYMENT.md  RENDER-SECRET-FILES.md  RENDER-SETUP-FINAL.md  ROBUST-DOWNLOADER.md  SOLUTION-SUMMARY.md  index.html  package-lock.json  package.json  playwright.config.ts  render.yaml  requirements.txt  vercel.json  vite.config.ts
api/: _test_download_validation.py  depth.py  download.py  extract_frames.py  pose.py  (+2 more)
backend/: .gitignore  =0.10.2  SETUP_COOKIES_FOR_RENDER.sh  botsort_reid.yaml  config.py  encode_cookies.py  export_cookies.py  main.py  pyproject.toml  requirements.txt  setup_cookies.py  setup_production_cookies.py  setup_render_cookies.sh  start.sh  test_add_formation.py  test_cookie_detection.py  test_cookies.py
backend/routers/: formations.py  tracking.py  video.py
backend/services/: audio_analyzer.py  detector.py  downloader.py  extractor.py  matcher.py  pdf_exporter.py  session.py  tracker.py  transformer.py
dance/backend/: .gitignore  Dockerfile  README.md  dev.sh  pyproject.toml  start.sh
dance/backend/src/backend/: __init__.py  main.py
dance/backend/src/backend/routers/: health.py  process.py
dance/backend/src/backend/services/: detector.py  formation.py  frame_extractor.py  homography.py
(+89 files in other folders)
