[project]
name = "formationai-backend"
version = "0.1.0"
description = "Backend API for FormationAI - dance formation extraction from videos"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "yt-dlp>=2026.3.17",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4",
    "ultralytics>=8.4.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "python-multipart==0.0.9",
    "lap==0.5.13",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routers", "services"]

[tool.uv]
dev-dependencies = []
