[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Truong", email = "alexhtruong64@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.27",
    "ultralytics>=8.4.46",
    "uvicorn[standard]>=0.46.0",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
